<resources>
    <string name="app_name">Calculator</string>
    <string name="undo">Undo</string>
    <string name="redo">redo</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="add_symbol">+</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="sub_symbol">-</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>
    <string name="multi_symbol">x</string>
    <string name="clear">C</string>
    <string name="brackets">()</string>
    <string name="percent">%</string>
    <string name="div_symbol">÷</string>
    <string name="num_0">0</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
</resources>